--- a/README
+++ b/README
@@ -1,6 +1,20 @@
 
-1. Since you're reading this, you should already have the scoreboard code.
-2. If you don't have Java 1.5 or later installed in your system, go get it (http://java.sun.com) and install it.
-3. Run the "start-<OS>.*" script for your appropriate system; i.e. for Windows run "start-Windows.bat", for Mac run "start-MacOS.command", for Linux/UNIX run "start-Linux.sh".
-4. Open the "start.html" page (this will redirect your browser to http://localhost:8000/ so you can also just go there directly instead).
-5. Detailed instructions and documentation are on that page.
+Since you're reading this, you should already have the scoreboard code.
+
+If you don't have Java 1.5 or later installed in your system, go get it ( http://java.com ) and install it.
+
+Once you have Java installed, run the program for your system (listed below) that is in the same directory as this README.
+Windows: scoreboard.exe
+Mac: scoreboard.command
+Linux: scoreboard.sh
+
+Then, open (double-click) the "start.html" page that is in the same directory as this README
+(or, just open a browser to http://localhost:8000/ )
+
+The web page that opens in your browser has more details on how to use the scoreboard.
+
+If you have any problems, please email the project mailing list:
+derbyscoreboard-devel@lists.sourceforge.net
+
+And please feel free to join the mailing list to keep up to date on bugfixes, new features, and new releases.
+https://lists.sourceforge.net/lists/listinfo/derbyscoreboard-devel
